2010-12-13  Olaf Till <olaf.till@uni-jena.de>

	* optimization/sqp.m: Remove never violated Inf bounds from
	computation in function for inequality constraints (bug
	#31742). Remove non-functional check for inequality constraints
	being +Inf in each iteration.

2010-12-12  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/optimget.m: Use explicit toupper conversion rather than
	lookup(..., "i").
	* optimization/optimset.m: Ditto.
	* miscellaneous/parseparams.m: Ditto.

2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Fix bugs with respect to number if inputs and argument
	handling.

2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Make view more compatible. Allow cartesian
	coordinates and axes handle arguments.

2010-12-10  Ben Abbott  <bpabbott@mac.com>

	* io/strread.m: Don't require space between format specifiers.

2010-12-10  Rik  <octave@nomad.inbox5.com>

	* testfun/speed.m: Eliminate line continuation in function definition.

2010-12-10  Kai Habel  <kai.habel@gmx.de>

	* plot/private/__pie__.m: Add missing slice option to pie and
	pie3 function.
	* plot/pie.m, plot/pie3.m: Add new demo.

2010-12-10  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* statistics/tests/kolmogorov_smirnov_test.m: Add tests.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/private/__pie__.m: Provide diagnositc for invalid
	optional arguments.  Use caller name instead of __pie__ in error
	messages.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* statistics/tests/kolmogorov_smirnov_test.m: Try both DIST_cdf
	and DISTcdf functions.  Always use feval to call CDF function.
	Bug #31838.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Set major and grid linewidths from
	axis linewidth property.  Bug #31755.

2010-12-09  Rik  <octave@nomad.inbox5.com>

	* plot/__print_parse_opts__.m: Convert print resolution from char to
	double.  Fixes Bug #31834.

2010-12-09  Rik  <octave@nomad.inbox5.com>
